cargo-features = ["profile-rustflags"]

[package]
name = "workload_tester"
version = "0.1.0"
edition = "2021"

[dependencies]
rparse = { path = "../" }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

[profile.release]
debug = true
debuginfo-level = 1
rustflags = ["-C", "symbol-mangling-version=v0"]